2012-12-10 Shahbaz Youssefi <shahbaz.youssefi@unige.it>

	* configure.in: modified for build against new glibc versions.
	* base/math/GNUmakefile.am: modified for build against new glibc
	  versions.
	* base/include/rtai_rwl.h: fixed a missing nam2num in
	  rt_named_rwl_init.
	* base/include/rtai_spl.h: fixed a missing nam2num in
	  rt_named_spl_init.
	* base/sched: added rt_get_exectime for kernel (and updated for
	  user) to give precise execution time.  Also added in showroom.

2012-08-03 Mark Fortescue <mark@mtfhpc.demon.co.uk>

        * base/addons/rtdm/module.c: split the loop initializing the timers 
	  into two parts, fixes possible SMP preemption issues.
        * base/addons/rtdm/xn.h: add missing list pointers at timers 
	  initialization.

2012-07-16 Pierangelo Masarati <masarati@aero.polimi.it>

	* RTAI 3.9

2012-02-14 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/addons/rtdm/xn.h: move WORK stuff out of a wrong embedding 
	  within an ifdef CONFIG_SMP.
        * base/arch/i386/hal/hal.immed: review and fix a few bugs of the 
	  reworked stuff related to enabling/disabling. 
        * base/arch/x86_64/hal/hal.immed: review and fix a few bugs of the 
	  reworked stuff related to enabling/disabling. 

2012-02-07 Pierangelo Masarati <masarati@aero.polimi.it>

	* RTAI 3.9-test2

2012-01-13 Roberto Bucher <roberto.bucher@supsi.ch>

	* rtai-lab/scicoslab/macros/Makefile: Installation for Scicoslab-4.4.1
	
2012-01-12 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/arch/x86_64/hal/hal.immed: reworked all the enabling/disabling 
	  interrupt controllers functions as already done for i386.

2012-01-10 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/i386/hal/hal.immed: reworked all the enabling/disabling 
	  interrupt controllers functions to hopefully work from 2.4.36
	  to 2.6.38; added a check for possible NULL pointers also.

2012-01-09 Pierangelo Masarati <masarati@aero.polimi.it>

	* RTAI 3.9-test1
