@@ -231,9 +231,8 @@ void put_current_on_cpu(int cpuid)
 		schedule_timeout(2);
 	}
 #else /* KERNEL_VERSION >= 2.6.0 */
-	if (set_cpus_allowed(task, cpumask_of_cpu(cpuid))) {
-		set_cpus_allowed(current, cpumask_of_cpu(((RT_TASK *)(task->rtai_tskext(TSKEXT0)))->runnable_on_cpus = rtai_cpuid()));
-	}
+	if (set_cpus_allowed_ptr(task, cpumask_of(cpuid))) {
+		set_cpus_allowed_ptr(current,cpumask_of(((RT_TASK *)(task->rtai_tskext(TSKEXT0)))->runnable_on_cpus = rtai_cpuid()));
 #endif  /* KERNEL_VERSION < 2.6.0 */
 #endif /* CONFIG_SMP */
 }
