@@ -1,3 +1,9 @@
+2012-12-12 John Morris <john@zultron.com>
+
+	* base/sched/sched.c: changed set_cpu_alllowed to set_cpu_allowed_ptr
+	  to allow compilation against kernels that have
+	  CONFIG_CPUMASK_OFFSTACK=y
+
 2012-12-10 Shahbaz Youssefi <shahbaz.youssefi@unige.it>
 
 	* configure.in: modified for build against new glibc versions.
